Increased the range of the UEF T3 torpedo launcher, slightly decreased the range of each of the anti-armour point defences. Added the Aeon T3 torpedo launcher.

--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -9,6 +9,15 @@
  \__)(_)(_)(_)(_)(_)\_)\__/(___)(____)\__/  \__/
 
 All changes by Sean Wheeldon (Balthazar) unless otherwise stated.
+
+__________.__________
+2015-04-06|0.6.1
+
+* Added some additional AI names for the Absolution.
+* Added the Aeon T3 torpedo launcher.
+* Increased the max range of the UEF T3 Torpedo Launcher.
+* Lowered the range of each of the anti-armor point defences by 5. (150 to 145)
+
 __________.__________
 2015-01-02|0.6
 
