--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -111,7 +111,13 @@ __________.__________
   2015-06-10
   
   * Additional texture work for Ivan.
-  * Created a distance model for Ivan.                                                                            
+  * Created a distance model for Ivan.
+  __________
+  2015-06-13
+  
+  * Ivan now has an LCD display of the ammo count.
+  * Fixed an issue with having actual repeat orders on with the scripted repeat orders.
+  * Addional texture work on the Ivan.                                                                                 
 __________.__________
 2015-01-02|0.6
 
