Seraphim no longer lose their battleship on no nukes games. Quantities of allowed nukes unaffected; Battleship loses its nukes when nukes are off now.

--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -192,7 +192,9 @@ __________.__________
   
   * New Sub-mod: For specific features while running both BrewLAN and BlackOps: Lucky Dip:
     * Anywhere that BlackOps and BrewLAN make similar units, it restricts one of them at random.
-  * Waterlag: Removed part of the collision model change that was effecting engineers wierdly.     
+  * Waterlag: Removed part of the collision model change that was effecting engineers wierdly.
+  * Removed the Seraphim Battleship from the no nukes restriction.
+  * Had the Seraphim Battleship disable its nuke launcher if nukes are restricted.            
 __________.__________
 2015-01-02|0.6
 
