--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -219,7 +219,14 @@ __________.__________
   __________
   2015-07-13
   
-  * Crates: Now with more effects. Including HATS!                          
+  * Crates: Now with more effects. Including HATS!
+  __________
+  2015-07-15
+  
+  * Jaisse: French localisation update, and loc fixes.
+  * More crate effects
+  * Waterlag: Reduced the colision offset so land units can shoot the UEF T1 radar again.
+  * BrewUI slight passthrough future proofing.                                    
 __________.__________
 2015-01-02|0.6
 
