--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -260,6 +260,12 @@ __________.__________
   2015-07-27
   
   * Minor aesthetic change to the ADG. It now does lizard eyes. I can't for the life of me work out what type of lizard it reminds me of.
+  __________
+  2015-07-29
+  
+  * Made the ADGs 'eyes' stop moving more often.
+  * Airborne bombers of the same type on the same team can no longer damage each other.
+    * This most specifically deals with the fact that a group of bombers attacking an Iron Curtain will almost certainly all kill eachother with their own bombs impacting the shield, but also affects experimental bombers hurting each other all the time when in groups.   
 __________.__________
 2015-01-02|0.6
 
