--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -9,7 +9,19 @@
  \__)(_)(_)(_)(_)(_)\_)\__/(___)(____)\__/  \__/
 
 All changes by Sean Wheeldon (Balthazar) unless otherwise stated.
+__________.__________
+2015-09-05|0.7
 
+* Fixed the third arm and thread accumalation of the Darkness.
+* Fixed the first arm on the distance model of the Darkness.
+* Changed the Darkness to use the default buffs system for applying its debuffs. This has the following effects:
+  * Effect is no longer affected by distance.
+  * It no longer has to specifically tracks units. Meaning it no longer crashes crash when one of them dies before it does, and uses less system resources.
+  * Its now multiple stacking buffs with a duration, rather than a defined specifically each time.
+  * Units leaving the area will now eventually lose the effect.
+* Fixed a bug in the vanilla buff definitions that references RADAR radius instead of OMNI radius when calculating the base size of omni buffs.
+  * Unfortunately this causes log warnings every time the a unit with a omni buff has its buffs change. But that is to do with how bad the vanilla code is.
+* Darkness now stops firing pulses when it doesn't have power. To some degree.               
 __________.__________
 2015-04-06|0.6.1
 
